# PdM-AM-WMT

./: Dockerfile  EDA.ipynb  README.md  consts.py  documentation.md  main.py  pyproject.toml  tech_report.md
src/model_core/: feature_dev.py  model_train_func.py
tfx_pipeline/: modules.py
tfx_pipoeline/: pipeline.py
